--- a/app/sass/pages/_portfolio.scss
+++ b/app/sass/pages/_portfolio.scss
@@ -90,50 +90,4 @@ li.project {
 			}
 		}
 	}
-
-	/*.project-overlay {
-		position:relative;
-		top:50%;
-		@include transform(translateY(-50%));
-		height:9rem;
-		@include media($desktop) {
-			width:20rem;
-		}
-		//margin-left:1rem;
-		background:#fff;
-		border-radius:5px;
-		//padding:0.5rem;
-		text-align:center;
-		box-shadow:0 0 20px rgba(#000, 0.2);
-		.project-overlay-header {
-			background:$grey-200;
-			padding:0.5rem;
-			border-top-right-radius:5px;
-			border-top-left-radius:5px;
-			border-bottom:1px solid $grey-300;
-			h2 {
-				@include subhead-text;
-				font-weight:500;
-			}
-			ul {
-				li {
-					display:inline-block;
-					margin-right:0.2em;
-					font-style:italic;
-					font-size:0.9em;
-					&:not(:last-child) {
-						&:after {
-							content:'\2219'
-						}
-					}
-				}
-			}
-		}
-		.project-overlay-main {
-			padding:0.5rem;
-			p {
-				text-align:left;
-			}
-		}
-	}*/
 }
