--- a/app/sass/partials/_nav.scss
+++ b/app/sass/partials/_nav.scss
@@ -50,9 +50,21 @@ nav {
         background:rgba(#fff,0.2);
         position:relative;
         @include transition(color 0.2s, background 0.2s ease);
+        &:after {
+          content:"";
+          position:absolute;
+          height:1rem;
+          width:100%;
+          left:0;
+          bottom:-1rem;
+          background:rgba(#fff,0.2);
+        }
         &.active {
           color:$pink-500;
           background:rgba(#fff, 1);
+          &:after {
+            background:rgba(#fff,1);
+          }
           /*&:after {
             content:"";
             width:1rem;
